...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--iTunes Movies-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="Search" id="BYZ-38-t0r" customClass="SearchViewController" customModule="KOA1" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rdx-42-70C">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIT-MF-HMO">
                                                    <rect key="frame" x="15" y="158.5" width="345" height="20.5"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="Nik-kV-r5b">
                                                    <rect key="frame" x="5" y="11" width="30" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="30" id="H3c-z5-W4b"/>
                                                        <constraint firstAttribute="height" constant="30" id="PLI-46-ha9"/>
                                                    </constraints>
                                                </imageView>
...
                            <constraint firstItem="rdx-42-70C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kD8-l6-5kW"/>
                            <constraint firstAttribute="bottom" secondItem="rdx-42-70C" secondAttribute="bottom" id="oAC-xQ-8Bj"/>
                            <constraint firstItem="rdx-42-70C" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="rcE-Br-1qb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="iTunes Movies" id="kBq-n2-0dL"/>
                    <connections>
                        <outlet property="emptyDataDescription" destination="UJY-8c-3Q4" id="9Rl-p1-WZu"/>
                        <outlet property="emptyDataTitle" destination="va7-Zs-JZ9" id="Lbb-yM-NPn"/>
                        <outlet property="emptyDataView" destination="ADL-r6-YQV" id="0TE-Lt-OhE"/>
                        <outlet property="tableView" destination="rdx-42-70C" id="EV2-Jp-emC"/>
                    </connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FIQ-8R-gj6">
                                <rect key="frame" x="20" y="587" width="335" height="50"/>
                                <color key="backgroundColor" red="0.12941176469999999" green="0.58823529409999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Nng-Oy-Ucv"/>
                                </constraints>
                                <state key="normal" title="Add to favorite">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <state key="disabled" title="Favorited"/>
                                <connections>
                                    <action selector="favoriteButtonPressed:" destination="8QD-W6-rVb" eventType="touchUpInside" id="Aba-cO-Wh2"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
